; ModuleID = '/home/carl/AnghaBench/sqlcipher/mptest/extr_mptest.c_vfsNameFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/mptest/extr_mptest.c_vfsNameFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"main\00", align 1
@SQLITE_FCNTL_VFSNAME = common dso_local global i32 0, align 4
@sqlite3_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @vfsNameFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vfsNameFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @sqlite3_context_db_handle(i32* %9)
  store i32* %10, i32** %7, align 8
  store i8* null, i8** %8, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @UNUSED_PARAMETER(i32 %11)
  %13 = load i32**, i32*** %6, align 8
  %14 = ptrtoint i32** %13 to i32
  %15 = call i32 @UNUSED_PARAMETER(i32 %14)
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* @SQLITE_FCNTL_VFSNAME, align 4
  %18 = call i32 @sqlite3_file_control(i32* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %17, i8** %8)
  %19 = load i8*, i8** %8, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %3
  %22 = load i32*, i32** %4, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* @sqlite3_free, align 4
  %25 = call i32 @sqlite3_result_text(i32* %22, i8* %23, i32 -1, i32 %24)
  br label %26

26:                                               ; preds = %21, %3
  ret void
}

declare dso_local i32* @sqlite3_context_db_handle(i32*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32) #1

declare dso_local i32 @sqlite3_file_control(i32*, i8*, i32, i8**) #1

declare dso_local i32 @sqlite3_result_text(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
